--- a/client/dockerfile
+++ b/client/dockerfile
@@ -7,6 +7,6 @@ RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
 
-EXPOSE 8081
+EXPOSE 8001
 
-CMD ["flask", "run", "--host=0.0.0.0"]
+ENTRYPOINT ["python", "client.py"]
