--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   server:
     build: 
-      context: server
-    command: flask run --host=0.0.0.0
+      context: ./server
+      dockerfile: dockerfile
     ports:
       - "8080:5000"
     environment:
@@ -12,14 +12,15 @@ services:
       - FLASK_ENV=development
       - DATABASE_URL=postgresql://postgres:postgres@db:5432/chatdb
     depends_on:
-      - db
+      db: 
+        condition: service_healthy
   
   client:
     build:
-      context: client
-    command: flask run --host=0.0.0.0
+      context: ./client
+      dockerfile: dockerfile
     ports:
-      - "8081:8081"
+      - "8001:8001"
     environment:
       - FLASK_APP=client.py
       - FLASK_ENV=development
@@ -31,8 +32,8 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: chatdb
-    ports:
-      - "5432:5432"
+    expose:
+      - "5432"
     volumes:
       - pgdata:/var/lib/postgresql/data
     healthcheck:
