Update master user data

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ server/.venv
 terraform/.terraform
 terraform/.terraform.lock.hcl
 terraform/terraform.tfstate
+terraform/terraform.tfstate.backup
+.DS_Store
