--- a/charts/message-service-chart/values.yaml
+++ b/charts/message-service-chart/values.yaml
@@ -19,9 +19,9 @@ env:
   DATABASE_URL: "postgresql://redes:kubernetes@postgres-postgresql:5432/chatdb"
 
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
-# autoscaling:
-#   enabled: false
-#   minReplicas: 1
-#   maxReplicas: 100
-#   targetCPUUtilizationPercentage: 80
-  # targetMemoryUtilizationPercentage: 80
+autoscaling:
+  enabled: true
+  minReplicas: 2
+  maxReplicas: 5
+  targetCPUUtilizationPercentage: 50
+  targetMemoryUtilizationPercentage: 50
