Healthcheck added, not working completely yet

--- a/charts/message-service-chart/templates/deployment.yaml
+++ b/charts/message-service-chart/templates/deployment.yaml
@@ -20,6 +20,13 @@ spec:
           imagePullPolicy: {{ .Values.image.pullPolicy }}
           ports:
             - containerPort: {{ .Values.service.port }}
+          livenessProbe:
+            httpGet:
+              path: /api/health
+              port: {{ .Values.service.port }}
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
           env:
             - name: POSTGRES_USER
               valueFrom:
