Add resource limits to message service deployment

--- a/charts/message-service-chart/templates/deployment.yaml
+++ b/charts/message-service-chart/templates/deployment.yaml
@@ -27,6 +27,13 @@ spec:
             initialDelaySeconds: 5
             periodSeconds: 10
             failureThreshold: 3
+          resources:
+            requests:
+              memory: "256Mi"
+              cpu: "250m"
+            limits:
+              memory: "512Mi"
+              cpu: "500m"
           env:
             - name: POSTGRES_USER
               valueFrom:
