Add resources requests/limits to values.yaml

--- a/charts/chat-frontend-chart/values.yaml
+++ b/charts/chat-frontend-chart/values.yaml
@@ -14,6 +14,14 @@ image:
 service:
   port: 80
 
+resources:
+  requests:
+    memory: "128Mi"
+    cpu: "100m"
+  limits:
+    memory: "512Mi"
+    cpu: "500m"
+
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
   enabled: true
