--- a/charts/message-service-chart/templates/deployment.yaml
+++ b/charts/message-service-chart/templates/deployment.yaml
@@ -29,11 +29,11 @@ spec:
             failureThreshold: 3
           resources:
             requests:
-              memory: "256Mi"
-              cpu: "250m"
+              memory: {{ .Values.resources.requests.memory }}
+              cpu: {{ .Values.resources.requests.cpu }}
             limits:
-              memory: "512Mi"
-              cpu: "500m"
+              memory: {{ .Values.resources.limits.memory }}
+              cpu: {{ .Values.resources.limits.cpu }}
           env:
             - name: POSTGRES_USER
               valueFrom:
