--- a/charts/message-service-chart/values.yaml
+++ b/charts/message-service-chart/values.yaml
@@ -23,6 +23,14 @@ env:
     passKey: password
     dbKey: database
 
+resources:
+  requests:
+    memory: "256Mi"
+    cpu: "250m"
+  limits:
+    memory: "512Mi"
+    cpu: "1000m"
+
 # This section is for setting up autoscaling more information can be found here: https://kubernetes.io/docs/concepts/workloads/autoscaling/
 autoscaling:
   enabled: true
