--- a/charts/logs-chart/templates/filebeat-kubernetes copy.yaml
+++ b/charts/logs-chart/templates/filebeat-kubernetes copy.yaml
@@ -114,7 +114,6 @@ data:
     filebeat.inputs:
     - type: filestream
       id: kubernetes-container-logs
-      enabled: true
       paths:
         - /var/log/containers/*.log
       parsers:
@@ -130,8 +129,6 @@ data:
             matchers:
             - logs_path:
                 logs_path: "/var/log/containers/"
-        - add_cloud_metadata:
-        - add_host_metadata:
 
     # To enable hints based autodiscover, remove `filebeat.inputs` configuration and uncomment this:
     # filebeat.autodiscover:
@@ -152,15 +149,17 @@ data:
     #           symlinks: true
     #        file_identity.fingerprint: ~
 
-    # cloud.id: ${ELASTIC_CLOUD_ID}
-    # cloud.auth: ${ELASTIC_CLOUD_AUTH}
+    processors:
+      - add_cloud_metadata:
+      - add_host_metadata:
 
-    output.logstash:
-      hosts: ["${LOGSTASH_HOST:logstash}:${LOGSTASH_PORT:5044}"]
+    cloud.id: ${ELASTIC_CLOUD_ID}
+    cloud.auth: ${ELASTIC_CLOUD_AUTH}
 
-    logging.level: info
-    logging.selectors: ["*"]
-      
+    output.elasticsearch:
+      hosts: ['${ELASTICSEARCH_HOST:elasticsearch}:${ELASTICSEARCH_PORT:9200}']
+      username: ${ELASTICSEARCH_USERNAME}
+      password: ${ELASTICSEARCH_PASSWORD}
 ---
 apiVersion: apps/v1
 kind: DaemonSet
@@ -190,10 +189,18 @@ spec:
           "-e",
         ]
         env:
-        - name: LOGSTASH_HOST
+        - name: ELASTICSEARCH_HOST
           value: logstash
-        - name: LOGSTASH_PORT
+        - name: ELASTICSEARCH_PORT
           value: "5044"
+        - name: ELASTICSEARCH_USERNAME
+          value: admin
+        - name: ELASTICSEARCH_PASSWORD
+          value: YourStrongSuperPassword123!
+        - name: ELASTIC_CLOUD_ID
+          value:
+        - name: ELASTIC_CLOUD_AUTH
+          value:
         - name: NODE_NAME
           valueFrom:
             fieldRef:
