Automate log infra

--- a/charts/logs-chart/templates/filebeat-kubernetes.yaml
+++ b/charts/logs-chart/templates/filebeat-kubernetes.yaml
@@ -191,7 +191,7 @@ spec:
         ]
         env:
         - name: LOGSTASH_HOST
-          value: logstash
+          value: {{ .Values.logstash.host | default "logstash" }}
         - name: LOGSTASH_PORT
           value: "5044"
         - name: NODE_NAME
