Add redis broker to coordinate message-services

--- a/charts/message-service-chart/templates/deployment.yaml
+++ b/charts/message-service-chart/templates/deployment.yaml
@@ -35,6 +35,8 @@ spec:
               memory: {{ .Values.resources.limits.memory }}
               cpu: {{ .Values.resources.limits.cpu }}
           env:
+            - name: REDIS_HOST
+              value: {{ .Values.redis.host }}
             - name: POSTGRES_USER
               valueFrom:
                 secretKeyRef:
