--- a/charts/message-service-chart/values.yaml
+++ b/charts/message-service-chart/values.yaml
@@ -14,6 +14,8 @@ image:
 service:
   port: 5000
 
+redis:
+  host: "redis://message-broker-redis"
 
 env:
   # DATABASE_URL: "postgresql://redes:kubernetes@postgres-postgresql:5432/chatdb"
